[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repoclarity"
version = "0.1.0"
description = "Understand any repo, locally."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "requests>=2.31.0",
]

[project.scripts]
rclr = "src.main:app"
repoclarity = "src.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
